test/script/gradle/fail-compilation/run.bat
call lines.source
exit /b 1
